...
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/your_name"
                        android:layout_width="fill_parent"
                        android:layout_height="38dp"
                        android:layout_marginBottom="20dp"
                        android:inputType="text"
                        android:textColor="@color/colorPrimary"
                        android:maxLines="1"
...
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/your_email"
                        android:layout_width="fill_parent"
                        android:layout_height="38dp"
                        android:layout_marginBottom="20dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:maxLines="1"
...
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/your_subject"
                        android:layout_width="fill_parent"
                        android:layout_height="38dp"
                        android:layout_marginBottom="20dp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimary"
...
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/your_message"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:height="180dp"
                        android:gravity="top"
                        android:inputType="text"
                        android:maxLines="8"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/post_message"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:background="@color/colorPrimary"
                        android:paddingBottom="1dp"
                        android:paddingLeft="15dp"
...
