...
    <string name="title_activity_main">MainActivity</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="header_title">Android|MeanStackDeveloper|Geek</string>
    <string name="about_para1">Hi, I\'m Sylvester Francis, a freelance MEAN Stack and Android developer/Tech enthusiast.</string>
    <string name="about_para2">My journey started off as a curious boy baffled by how computers could simplify our lives. Now I\'m interested in honing my skills to become a better programmer and show other people the wonders that computers are truly capable of.</string>
    <string name="about_para3">Take a look at my skills,if you have an interesting app idea or want to meet me to discuss anything tech-related,feel free to contact me.</string>
...
